# catprint

./: README.md  app.py  playground.py  pyproject.toml
docs/: index.html  main.js  printer.js  render.js
src/: catprint.py
src/catprint/: __init__.py  __main__.py  effects.py  print.py  printer.py  render.py
web/: index.html  main.js  printer.js  render.js  style.css
